--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,10 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://65.2.80.212:9000/</sonar.host.url>
+		<sonar.host.url>http://13.233.9.236:9000/</sonar.host.url>
+		<sonar.login>cd1d01aab097f1041c4340acb7f67ad969af132e</sonar.login>
                 <sonar.login>admin</sonar.login>
-		<sonar.password>passw0rd</sonar.password>
+		<sonar.password>admin</sonar.password>
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
