--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 		<!-- <sonar.host.url>http://13.232.5.182:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> -->
+		<log4j.version>1.2.17</log4j.version>
+		<sonar.host.url>http://38.242.220.73:9000/</sonar.host.url>
+                <sonar.login>admin</sonar.login>
+		<sonar.password>10decoders</sonar.password>
+             
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
