--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
+		<sonar.host.url>http://38.242.220.73:9000/</sonar.host.url>
+		<sonar.login>8e463f31641ebb4435d34072810ddec318cb0aae</sonar.login>
 		<!-- <sonar.host.url>http://13.232.5.182:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> -->
